--- a/rakefile
+++ b/rakefile
@@ -19,7 +19,7 @@ task :deploy, :projectname, :environment do | dp, args |
     roleList = checkRequiredRoles(args[:environment], args[:projectname])
     puts "\'#{roleList}\'"
     system "cd #{ENV['WESTARETE']}/chef-repo; knife server create -e #{args[:environment]} -n #{args[:projectname]} -b Y -r \'#{roleList}\'"
-    exists = checkForExistingServer
+    exists = checkForExistingServer( args[:environment], args[:projectname] )
     (exists) ? pushNewRelease(args[:environment], args[:projectname]) : fail("error creating server.\n")
   end
 end
