--- a/rakefile
+++ b/rakefile
@@ -6,26 +6,26 @@ system "rake -T"
 end
 
 desc "deploy site to (beta | staging | production)"
-task :deploy, :projectname, :environment do | dp, args |
+task :deploy, [:projectname, :environment] => :verifyChef do | dp, args |
   verifyChef
   verifyEnvironment( args[:environment] )
   exists = checkForExistingServer( args[:environment], args[:projectname] )
   if exists then
-    puts "exists"
+    puts color('exists', 'green')
     checkForRoleUpdate(args[:environment], args[:projectname])
     pushNewRelease(args[:environment], args[:projectname])
   else
-    puts "not yet"
+    puts color('not yet', 'yellow')
     roleList = checkRequiredRoles(args[:environment], args[:projectname])
     puts "\'#{roleList}\'"
     system "cd #{ENV['WESTARETE']}/chef-repo; knife server create -e #{args[:environment]} -n #{args[:projectname]} -b Y -r \'#{roleList}\'"
     exists = checkForExistingServer( args[:environment], args[:projectname] )
-    (exists) ? pushNewRelease(args[:environment], args[:projectname]) : fail("error creating server.\n")
+    (exists) ? pushNewRelease(args[:environment], args[:projectname]) : fail(color("error creating server.\n", 'red'))
   end
 end
 
 desc "destroy a site's server"
-task :destroy, :projectname, :environment do |ds, args|
+task :destroy, [:projectname, :environment] => :verifyChef do |ds, args|
   puts "Are you sure you want to delete < #{args[:environment] + '.' + args[:projectname] + '.westarete.com'} >? [Yn]"
   sure = STDIN.gets.strip
   if /[yY]([eE][sS])*/ =~ sure then
@@ -36,18 +36,39 @@ task :destroy, :projectname, :environment do |ds, args|
 end
 
 desc "list all chef-ed servers and roles"
-task :list do |l|
+task :list => :verifyChef do |l, args|
   nodeList = `cd #{ENV['WESTARETE']}/chef-repo; knife node list`.split
+  nodeSet = []
   nodeList.each do |node|
     nodeInfo = `cd #{ENV['WESTARETE']}/chef-repo; knife node show #{node}`.split("\n")
     nodeInfo = (nodeInfo.collect! { |r| r.scan(/[a-zA-Z.0-9\-]*$|\[[a-zA-Z\-]*\]/).join }).slice(0,5)
-    print nodeInfo.join("\n\t"), "\n\n"
+    #print nodeInfo.join("\n\t"), "\n\n"
+    nodeSet << nodeInfo
+  end
+  m = nodeSet.map { |_| _.length }
+  nodeSet.each { |_| _.each_with_index { |e, i| s = e.size; m[i] = s if s > m[i] } }
+  nodeSet.each { |x| puts m.map { |_| "%#{_}s" }.join(" " * 5) % x }
+end
+
+task :verifyChef do
+  print "chef-repo:\t"
+  if ENV['WESTARETE'] then
+    if File.exists?("#{ENV['WESTARETE']}/chef-repo") then 
+      puts color("OK", "green")
+      verifyKnifeInstallation( "#{ENV['WESTARETE']}/chef-repo" )
+    else
+      fail("#{color('not found!', 'green')}\n Please clone/install the chef repo properly\n")
+    end
+  else
+    puts color("not found!", "yellow")
+    print "Would you like to set up your $WESTARETE environment variable temporarily? [Yn]: "
+    setUp = (/[yY]/ =~ STDIN.gets.strip)
+    (setUp) ? setUpWestAretePath : fail("Please set your $WESTARETE environment variable correctly\n")
   end
 end
 
-
 def pushNewRelease( environment, projectName )
-  print "deploying new site...."
+  puts "deploying new site...."
   host = environment + "." + projectName + ".westarete.com"
   user = "deploy"
   remote_path = "/var/www/sites/#{host}/releases"
@@ -65,16 +86,16 @@ def pushNewRelease( environment, projectName )
     commands.each { |line| puts ssh.exec!(line) }
     ssh.loop
   end
-  puts "done!"
+  puts color("done!", 'green')
 end
 
 def checkForRoleUpdate( environment, projectName )
-  print "role-update?:\t"
   nodeName = environment + "." + projectName + ".westarete.com"
   currentRunList = `cd #{ENV['WESTARETE']}/chef-repo; knife node show #{nodeName}`.split("\n")[4]
   newRunListPosition = (/[ ][ ]+(.*)/ =~ currentRunList)
   newRunList = $1
   oldRunList = checkRequiredRoles( environment, projectName )
+  print "role-update?:\t"
   if newRunList == oldRunList then
     puts "NO"
   else
@@ -87,7 +108,7 @@ def checkRequiredRoles( environment, projectName)
   print "roles:\t\tsearching..."
   roles = []
   if ! File.exists?("#{ENV['WESTARETE']}/#{projectName}/Gemfile") then
-    puts "failed!\t No local project gemfile found!"
+    puts color("failed!", "red"), "\t No local project gemfile found!"
     puts "What roles/recipes would you like this project to have? [ie. role[webserver], recipe[postgre] ]"
     inputRoles = STDIN.gets.strip.split(/[ ]*,[ ]*/)
     verifyRoles( inputRoles )
@@ -116,7 +137,7 @@ def verifyRoles( roleList )
       /[ ]*role\[(.*)\]/ =~ item
       name = $1
       if availableRoles.index(name) == nil then
-        puts "failed!"
+        puts color("failed!", "red")
         fail("\t invalid role supplied. Available roles are:\n #{availableRoles}\n")
       end
     elsif (item.index('recipe') != nil ) then
@@ -124,15 +145,15 @@ def verifyRoles( roleList )
       name = $1
       index = nil
       if availableRecipes.index(name) == nil then
-        puts "failed!"
+        puts color("failed!", "red")
         fail( "\t invalid recipe supplied. Available recipes are:\n #{availableRecipes}\n" )
       end
     else
-      puts "failed!"
+      puts color("failed!", "red")
       fail( "invalid role/recipe in the role list provided.\nAvailable roles:\n#{availableRoles}\nAvailable recipes:\n#{availableRecipes}\n" )
     end
   end
-  puts "success!"
+  puts color("success!", "green")
 end
 
 def checkForExistingServer( environment, projectName )
@@ -140,23 +161,6 @@ def checkForExistingServer( environment, projectName )
   serverSet = `cd #{ENV['WESTARETE']}/chef-repo; knife client list 2> /dev/null`.split
   deployServerName = environment + "." + projectName + ".westarete.com"
   exists = serverSet.index(deployServerName)
-end
-
-def verifyChef
-  print "chef-repo:\t"
-  if ENV['WESTARETE'] then
-    if File.exists?("#{ENV['WESTARETE']}/chef-repo") then 
-      puts "OK"
-      verifyKnifeInstallation( "#{ENV['WESTARETE']}/chef-repo" )
-    else
-      fail("not found!\n Please clone/install the chef repo properly\n")
-    end
-  else
-    puts "not found!"
-    print "Would you like to set up your $WESTARETE environment variable temporarily? [Yn]: "
-    setUp = (/[yY]/ =~ STDIN.gets.strip)
-    (setUp) ? setUpWestAretePath : fail("Please set your $WESTARETE environment variable correctly\n")
-  end
 end
 
 def setUpWestAretePath
@@ -171,7 +175,7 @@ def verifyKnifeInstallation( location )
   print "knife:\t\t"
   currentLocale = ENV['PWD']
   output = `cd #{location}; knife client list 2> /dev/null`
-  puts (/Check your configuration/ =~ output) ? fail("error!\nInstall knife properly.\n") : "OK"
+  puts (/Check your configuration/ =~ output) ? fail("#{color('error!', 'red')}\nInstall knife properly.\n") : color("OK", "green")
 end
 
 
@@ -181,7 +185,7 @@ def verifyEnvironment( purportedEnvironment )
   if environments.index( purportedEnvironment ) then
     puts "#{purportedEnvironment}"
   else
-    fail( "invalid! (beta, staging, production)\n" )
+    fail( "#{color('invalid!', 'red')} (beta, staging, production)\n" )
   end
 end
 
@@ -189,3 +193,17 @@ def fail( reason )
   print "#{reason}"
   exit 1
 end
+
+def color( text, color )
+  colors = {
+    :RED     => "\e[31m",
+    :GREEN   => "\e[32m",
+    :YELLOW  => "\e[33m",
+    :BLUE    => "\e[34m",
+    :MAGENTA => "\e[35m",
+    :CYAN    => "\e[36m",
+    :CLEAR   => "\e[0m"
+  }
+  output = "#{colors[color.upcase.intern]}#{text}#{colors[:CLEAR]}"
+end
+
