--- a/rakefile
+++ b/rakefile
@@ -28,7 +28,9 @@ end
 
 desc "destroy a site's server"
 task :destroy, [:projectname, :environment] => :verifyChef do |ds, args|
-  puts "Are you sure you want to delete < #{args[:environment] + '.' + args[:projectname] + '.westarete.com'} >? [Yn]"
+  /(([a-zA-Z0-9\-]+[.]{0,1})+[a-zA-Z0-9\-]*)+[.](org|com|net)*$/ =~ args[:projectname]
+  cleanedProjectName = $1
+  puts "Are you sure you want to delete < #{args[:environment] + '.' + cleanedProjectName + '.westarete.com'} >? [Yn]"
   sure = STDIN.gets.strip
   if /[yY]([eE][sS])*/ =~ sure then
     system %& cd #{ENV['WESTARETE']}/chef-repo; knife server destroy -h "#{args[:environment] + '.' + args[:projectname] + '.westarete.com'}" &
